Fixed cover images to scale correctly on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,7 @@ body {
 #cover {
     color: #fff;
     height: 100%;
+    max-width: 100%;
     text-align: center;
     display: flex;
     align-items: center;
